--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  geolocator: ^13.0.1
+  http: ^1.2.2
 
 
 dev_dependencies:
